--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,6 +1,7 @@
 footer {
     height: 25vh;
-    background-color: rgba(249, 180, 31, 0.4);
+    background: #212529;
+    color: #ffff;
 }
 
 .footer {
