--- a/src/Containers/TryFree/TryFree.css
+++ b/src/Containers/TryFree/TryFree.css
@@ -107,3 +107,26 @@ body {
   font-weight: bold;
   font-size: 1.25rem;
 }
+
+@media screen and (max-width:800px) {
+  .coverRegisterInputTryFree {
+    margin: auto;
+    display: block;
+    width: auto;
+  }
+
+  .coverRegisterButtonTryFree {
+    display: block;
+    margin: auto;
+    width: auto;
+  }
+
+  .coverRegisterButtonContactTryFree {
+    display: block;
+    margin: auto;
+    width: auto;
+    position: relative;
+    left: 0%;
+  }
+
+}
