--- a/src/Components/NavBar/Navbar.css
+++ b/src/Components/NavBar/Navbar.css
@@ -1,5 +1,6 @@
 .navBar {
     top: 0;
+    left: 0;
     position: fixed;
     height: 8%;
     width: 90%;
@@ -8,6 +9,7 @@
     flex-direction: row;
     align-items: center;
     background: transparent;
+    z-index: 3;
 }
 
 .routeNavBar {
@@ -19,14 +21,16 @@
 }
 
 .logoNavBar {
+    margin-left: 10%;
     height: 100%;
     width: 4rem;
 }
 
-.logoNavBar img{
+.logoNavBar img {
     width: 100%;
     height: 100%;
 }
+
 .textNavBar {
     margin-left: 5%;
     width: 30%;
@@ -49,7 +53,7 @@
 
 .buttonNavBar button {
     transition: 1s;
-    background-color:  #3A5AFF;
+    background-color: #3A5AFF;
     border: none;
     border-radius: 0.5rem;
     padding: 0.6rem;
@@ -57,14 +61,13 @@
     color: #ffff;
     font: bold;
     font-family: Coiny;
-    -webkit-box-shadow: 0px 4px 0px 0px #1814ff; 
+    -webkit-box-shadow: 0px 4px 0px 0px #1814ff;
     box-shadow: 0px 4px 0px 0px #1814ff;
 }
 
 .buttonNavBar button:hover {
-
     transition: 1s;
-    -webkit-box-shadow: 0px 0px 0px 0px #1814ff; 
+    -webkit-box-shadow: 0px 0px 0px 0px #1814ff;
     box-shadow: 0px 0px 0px 0px #1814ff;
 }
 
@@ -72,7 +75,6 @@
     transition: 1s;
     cursor: pointer;
     color: #F9B41F;
-    
 }
 
 .logoNavBar {
@@ -97,4 +99,153 @@
     transition: 0.5s;
     cursor: pointer;
     color: #F9B41F;
+}
+
+#overlay {
+    display: none;
+}
+
+#hamburger {
+    margin: 4%;
+}
+
+#hamburger {
+    position: fixed;
+    right: 0;
+    margin-right: 10%;
+    opacity: 1;
+    cursor: pointer;
+    transition: opacity 0.25s linear;
+    width: clamp(1.5rem, 2vw + 1.1rem, 6rem);
+    height: clamp(2rem, 1.4vw + 1.7rem, 5rem);
+    display: flex;
+    align-items: center;
+}
+
+#hamburger div, #hamburger div:after, #hamburger div:before {
+    background-color: #fafafa;
+    border-radius: 10px;
+    width: clamp(1.5rem, 2vw + 1.1rem, 6rem);
+    height: clamp(0.2rem, 0.3vw + 0.1rem, 0.8rem);
+    transition: all 0.15s linear;
+}
+
+#hamburger div:before, #hamburger div:after {
+    content: "";
+    position: absolute;
+}
+
+#hamburger div:before {
+    transform: translateY(-200%);
+}
+
+#hamburger div:after {
+    transform: translateY(200%);
+}
+
+#hamburger.open div {
+    background: transparent;
+}
+
+#hamburger.open div:before {
+    transform: rotate(45deg);
+}
+
+#hamburger.open div:after {
+    transform: rotate(-45deg);
+}
+
+
+@media (min-width: 1300px) {
+    #hamburger {
+        display: none;
+    }
+    #overlay {
+        display: none;
+    }
+}
+
+@media (max-width: 1300px) {
+    .routeNavBar {
+        transition: 1s;
+        display: none;
+    }
+    .hamburger {
+        display: flex;
+    }
+    .navBar {
+        transition: 1s;
+        width: 100%;
+        margin-left: 0%;
+        background-color: #212529;
+    }
+
+    #overlay {
+        position: fixed;
+        width: 100%;
+        min-height: 50%;
+        background-color: #212529;
+        z-index: 2;
+        transform: translateY(-100%);
+        transition: all 0.5s ease-in-out;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    
+    #overlay.menu {
+        transform: translateY(0%);
+    }
+    
+    #overlay h1 {
+        text-decoration: none;
+        color: #fafafa;
+        margin: 2%;
+        opacity: 1;
+        text-align: left;
+        transition: opacity 0.2s linear;
+    }
+    
+    .overlayLinks div {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: flex-start;
+    }
+    
+    .overlayLinks {
+        width: 100%;
+    }
+    
+    .overlayLinks :active{
+        color: #1F90F9;
+        ;
+    }
+    
+    .overlaySelector {
+        height: 2rem;
+        background-color: #ffff;
+        width: 0.2rem;
+    }
+    
+    #overlay a:hover {
+        opacity: 1;
+    }
+    
+    .overlayButton {
+        justify-self: center;
+        transition: 1s;
+        background-color: #3A5AFF;
+        border: none;
+        border-radius: 0.5rem;
+        padding: 0.6rem;
+        cursor: pointer;
+        color: #ffff;
+        font: bold;
+        font-family: Coiny;
+        -webkit-box-shadow: 0px 4px 0px 0px #1814ff;
+        box-shadow: 0px 4px 0px 0px #1814ff;
+    }
+    
+    
 }
