--- a/src/Containers/TryFree/TryFree.css
+++ b/src/Containers/TryFree/TryFree.css
@@ -61,6 +61,7 @@ body {
   text-align: center;
   letter-spacing: 0.05em;
   color: #544837;
+  justify-content: center;
 }
 
 .coverRegisterMainTryFree {
@@ -107,6 +108,18 @@ body {
   color: white;
   font-weight: bold;
   font-size: 1.25rem;
+}
+input[type="submit"]{
+  box-shadow: inset 1px -4px 1px rgba(0, 0, 0, 0.25);
+}
+
+input[type="submit"]:active{
+  box-shadow: inset -1px 4px 1px rgba(0, 0, 0, 0.25);
+}
+
+input[type="submit"]:hover{
+  transform: scale(1.01, 1.01);
+  transition: .2s;
 }
 
 @media screen and (max-width:800px) {
