--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -5,7 +5,7 @@ footer {
 }
 
 .footer {
-    height: 100%;
+    height: 90%;
     width: 80%;
     margin-left: 10%;
     display: flex;
@@ -90,6 +90,8 @@ footer {
 }
 
 .textFooter {
+    bottom: 0;
+    position: relative;
     height: 10%;
     text-align: center;
 }
@@ -111,14 +113,6 @@ footer {
     .routeFooter {
         width: 80%;
         flex-direction: row;
-    }
-
-    .textFooter{
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        margin-left: 42.5%;
-        margin-bottom: -5%;
     }
 
     .contactFooter {
@@ -158,14 +152,6 @@ footer {
 
     .midFooter{
         width: 100%;
-    }
-
-    .textFooter{
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        margin-left: 42.5%;
-        margin-bottom: -5%;
     }
 
     .contactFooter {
